--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "085ba9a4c5490747221f61a8409ad63f0c4cf2e8"
 yandex_site_verification :
 baidu_site_verification  :
 
